# search-engine

./: .gitignore  AVLMap.h  AVLTemplatedMap.h  AVLTree.h  AVLTreeNew.h  AVLTreeTemplated.h  BinarySearchTree.h  CMakeLists.txt  DSVector.h  DataStructure_Tests.cpp  Index.cpp  Index.h  Interface.cpp  Interface.h  ProjectTimingDemo.cpp  ProjectTimingDemo.h  QueryParser.cpp  QueryParser.h  README.md  ReadInData.cpp  ReadInData.h  SearchEngine.cpp  SearchEngine.h  catch.hpp  catch_setup.cpp  catch_setup.h  main.cpp  readme.md  stemmer.cpp  stemmer.h  tempTestAVLTree.h
.github/workflows/: cmake.yml
.run/: 22su_PA03.run.xml
data/: stopwords.txt
rapidjson/: allocators.h  document.h
sample_data/: news_0064573.json
